добавила container-locations
заменила container на container-locations

--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -16,16 +16,30 @@
         }
 }
 
-.container {  
-    // @media screen and (min-width: 768px) {
-    // height: 460px;
-
-    @media screen and (min-width: 1280px) {
-        padding-right: 0;
-        padding-left: 0;
-        // height: 485px;
+.container-locations {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    // outline: 1px solid tomato;
+  
+    @media screen and (min-width: 320px) {
+      width: 320px;
     }
-}
+  
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      padding-left: 34px;
+      padding-right: 34px;
+    }
+  
+    @media screen and (min-width: 1280px) {
+      width: 1280px;
+      padding-left: 115px;
+      padding-right: 115px;
+    }
+  }
+  
    
 .locations-list {
     position: relative;
@@ -79,7 +93,7 @@
         padding-left: 27px;
         padding-top: 50px;
         padding-bottom: 50px;
-        width: 210px;
+        width: 220px;
     }
     @media screen and (min-width: 1280px) {
         width: 330px;
