--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,8 +1,6 @@
 <section class="locations">
     <!-- <div class="locations-white-block"></div> -->
-
-    <div class="container">
-
+    <div class="container-locations">
         <ul class="locations-list">
             <li class="locations-item">
                 <p class="locations-item-cafe">CAFE</p>
@@ -77,5 +75,5 @@
                 </ul>
             </li>
         </ul>
-    </div>
+    <!-- </div> -->
 </section>
