--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -5,32 +5,15 @@
 
         <div class="benefits-description">
 
+            
             <img 
-            src="./images/cow.jpg" alt="cow">
-
-            <!-- <img 
              srcset="
-                ./images/cow.jpg 320w,
-                ./images/cow@2x 780w,
+                ./images/cow.jpg 516w,
+                ./images/cow@2x.jpg 1032w
                 "
             src="./images/cow.jpg" alt="cow"
-            sizes="(min-width: 480px) 50vw, 100vw"> -->
-
-            
-        
-             <img 
-             srcset="/images/cow.jpg 1x, /images/cow@2x.jpg 2x"
-            src="/images/cow.jpg" 
-            alt="cow"
+            sizes="(min-width: 768px) 50vw, 100vw"
             >
-
-             <!-- <img class="product-image" 
-             srcset="
-             ./images/icecream.png 1x, 
-             ./images/icecream@2x.png 2x" 
-             src="./images/icecream.png" width="250" 
-             alt="Ice Cream" /> -->
-
 
             <div>
                 <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
