--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -60,9 +60,10 @@
     }
 
     & img {
+        height: auto;
         
         @media screen and (min-width: 768px){
-        // max-width: 50%;
+        max-width: 50%;
         }
         }
 
