--- a/src/sass/components/locations/_locations.scss
+++ b/src/sass/components/locations/_locations.scss
@@ -45,6 +45,7 @@
     background: $main-white-color;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
+    transition: 600ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and (max-width: 767px) {
         &:not(:last-child) {
@@ -73,7 +74,6 @@
     &:hover,
     &:focus {
       box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.4); 
-      transition: 600ms cubic-bezier(0.4, 0, 0.2, 1);
     }  
 }
 
@@ -304,14 +304,13 @@
     border: 0 solid transparent;
     cursor: pointer;
     text-transform: none;
+    transition: 250ms; 
 
     &:hover,
     &:focus {
         transform: scale(1.1);
         outline: 0;
-        box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.4);
-        transition: 250ms; 
+        box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.4)
     }
-
 }
 
