--- a/src/sass/layout/_page-hero.scss
+++ b/src/sass/layout/_page-hero.scss
@@ -1,21 +1,20 @@
 .page-hero{
     height: 618px;
-    padding-top: 109px;
+    padding-top: 110px;
     padding-bottom: 47px;
-    width: 320px;
-
-/*    background-image: url('../images/hero/hero-wave-mobile.png');
+    background-image: url('../images/hero/hero-wave-mobile.png');
     background-position: center;
     background-repeat: no-repeat;
-*/
+    background-size:cover;
 }
 
 .hero-wrapper{
-    position: absolute;
+    position: relative;
 }
 
 .hero-title{
     margin-bottom: 30px;
+    width: 100%;
 
     font-weight: 800;
     font-size: 20px;
@@ -63,6 +62,7 @@
 
     color: var(--white-color);
     background-color: var(--orange-color);
+    box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
 
     border: none;
 
@@ -93,7 +93,7 @@
     .hero-title{
         font-size: 26px;
         line-height: 1.307;
-        max-width: 315px;
+        width: 315px;
     }
 
     .hero-text-wrapper{
@@ -107,10 +107,10 @@
 
     .hero-bg{
         position: absolute;
-        top: 0;
+        top: 10px;
         left: 374px;
         width: 390px;
-        height: 321px;
+        height: 335px;
     
         background-image: url('../images/hero/hero-bg-tablet.png');
     }
@@ -121,6 +121,9 @@
         padding-top: 228px;
         padding-bottom: 114px;
         height: 878px;
+    }
+
+    .hero-wrapper{
         background-image: url('../images/hero/hero-wave-desktop.png');
     }
 
@@ -128,6 +131,11 @@
         font-size: 58px;
         line-height: 1.293;
         max-width: 642px;
+    }
+
+    .hero-text{
+        font-size: 20px;
+        line-height: 1.65;
     }
 
     .hero-text-wrapper{
@@ -149,7 +157,7 @@
         width: 841.55px;
         height: 718px;
         top: -77px;
-        left: 792px;
+        left: 610px;
     
         background-image: url('../images/hero/hero-bg-desktop.png');
     }
