--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -234,7 +234,9 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 108.53px 20px 320.47px 20px;
+    padding-top: 108px;
+    padding-bottom: 320px;
+
     &.is-open {
       display: block;
       background-color: rgba(17, 21, 24, 0.9);
@@ -251,7 +253,9 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 159px 218px 687px 218px;
+    padding-top: 159px;
+    padding-bottom: 687px;
+
     &.is-open {
       display: block;
       background-color: rgba(17, 21, 24, 0.9);
@@ -260,5 +264,21 @@ body {
       line-height: 1.808;
       color: var(--white-color);
     }
+  }
+}
+
+.container.navigation-header {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    max-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
+    max-width: 768px;
+    padding-left: 218px;
+    padding-right: 218px;
+  }
+  @media screen and (min-width: 1344px) {
+    padding: 0;
   }
 }
