--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,11 +6,7 @@
   <div class="footer-socials">
     <ul class="footer-socials-list list">
       <li class="socials-item">
-        <a
-          class="socials-link link"
-          href="https://github.com/"
-          class="socials-link"
-        ></a>
+        <a class="socials-link link" href="https://github.com/"></a>
         <svg class="socials-icon" width="32" height="32">
           <use href="./images/icons/symbol-defs.svg#icon-github.svg"></use>
         </svg>
@@ -22,11 +18,7 @@
         </svg>
       </li>
       <li class="socials-item">
-        <a
-          class="socials-link link"
-          href="https://www.facebook.com/"
-          class="socials-link"
-        ></a>
+        <a class="socials-link link" href="https://www.facebook.com/"></a>
         <svg class="socials-icon" width="32" height="32">
           <use href="./images/icons/symbol-defs.svg#icon-facebook.svg"></use>
         </svg>
