--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -25,6 +25,7 @@
       background-image: url('../images/wave/wave-tablet@2x-min.png');
     }
   }
+
   @media screen and (min-width: 1344px) {
     padding-top: 45px;
     padding-bottom: 106px;
@@ -36,7 +37,6 @@
     }
   }
 }
-// }
 
 .hero.container {
   @media screen and (min-width: 768px) {
@@ -171,6 +171,16 @@
     height: 718.14px;
   }
 }
+// @media screen and (min-width: 1344px) {
+//   // padding-top: 45px;
+//   // padding-bottom: 106px;
+//   background-image: url('../images/hero/group-tab.png');
+//   @media screen and (min-device-pixel-ratio: 2),
+//     screen and (min-resolution: 192dpi),
+//     screen and (min-resolution: 2dppx) {
+//     background-image: url('../images/wave/wave-desc@2x-min.png');
+//   }
+// }
 // @media screen and (min-width: 1344px) {
 // }
 
