--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -3,7 +3,7 @@
 <section class="locations">
     <div class="container">
         <h2 class="visually-hidden">our locations</h2>
-        <ul class="locations-list list">
+        <ul class="locations-list">
 
             <li class="locations-list-item">
                 <h3 class="locations-item-title">CAFE</h3>
@@ -11,7 +11,7 @@
                     <h4 class="city-name text-title-style">Chicago</h4>
                     <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 </div>
-                <ul class="working-days-sublist list">
+                <ul class="working-days-sublist">
                     <li class="sublist-item">
                         <p class="working-days text-title-style">Monday - Friday</p>
                         <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
@@ -55,7 +55,7 @@
                     <h4 class="city-name text-title-style">New York</h4>
                     <p class="location-description text-description-style">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 </div>
-                <ul class="working-days-sublist list">
+                <ul class="working-days-sublist">
                     <li class="sublist-item">
                         <p class="working-days text-title-style">Monday - Friday</p>
                         <p class="working-hours text-title-style">06:00 AM - 10:00 PM</p>
@@ -73,18 +73,20 @@
 
         </ul>
 
-        <button type="button" class="our-locations-button">
-            Our Locations
-            <svg class="location-button-icon">
-                <use href="./images/svg/sprite.svg#icon-close"></use>
-            </svg>
-        </button>
-        <button type="button" class="franchise-button">
-            Franchise
-            <svg class="location-button-icon">
-                <use></use>
-            </svg>
-        </button>
+        <div class="location-buttons">
+            <button type="button" class="btn appeal-one">
+                Our Locations
+                <svg class="btn-icon next-one">
+                    <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+                  </svg>
+            </button>
+            <button type="button" class="btn appeal-two">
+                Franchise
+                <svg class="btn-icon next-two">
+                    <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+                  </svg>
+            </button>
+        </div>
     </div>
 
 </section>
