--- a/src/sass/layout/_locations.scss
+++ b/src/sass/layout/_locations.scss
@@ -1,4 +1,4 @@
-/***LOCATIONS***/
+/*********LOCATIONS***********/
 
 .text-title-style {
     font-weight: 500;
@@ -15,39 +15,45 @@
 }
 
 .locations {
+    height: 765px;
+    position: relative;
     background-color: var(--description-background-color);
-}
 
-.locations-list {
-    margin-bottom: -20px;
-    margin-top: 86px;
-}
+    & .container {
+        position: absolute;
+        top: -102px;
+    }
 
-.locations-list-item {
-    width: 220px;
-    height: 427px;
-    padding: 43px 20px;
-    margin-bottom: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
+    &-list {
+        margin-bottom: -20px;
 
-    background-color: var(--primary-white-color);
-    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-    border-radius: 24px;
-}
+        &-item {
+            min-width: 220px;
+            min-height: 427px;
+            padding: 43px 20px;
+            margin-bottom: 20px;
+            margin-left: auto;
+            margin-right: auto;
+                   
+            background-color: var(--primary-white-color);
+            box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+            border-radius: 24px;
+        }
+    }
 
-.locations-item-title {
-    width: 80px;
-    height: 16px;
+    &-item-title {
+        width: 80px;
+        height: 16px;
+        
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.41;
+        text-align: center;
+        color: var(--primary-white-color);
     
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.41;
-    text-align: center;
-    color: var(--primary-white-color);
-
-    background-color: var(--location-cafe-color);
-    border-radius: 4px;
+        background-color: var(--location-cafe-color);
+        border-radius: 4px;
+    }
 }
 
 .foodtruck {
@@ -83,4 +89,144 @@
     display: flex;
     flex-direction: column;
     margin-top: 25px;
+}
+
+.location-buttons {
+    margin-top: 54px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+    .btn {
+        min-width: 161px;
+    }
+
+    .btn:not(:last-child) {
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .locations-item-title {
+        width: 73px;
+        height: 28px;
+        
+        font-size: 16px;
+        line-height: 1.86;
+    }
+
+    .foodtruck {
+        width: 138px;
+    }
+
+    .locations-list {
+        margin-bottom: 81px;
+        margin-top: 0;
+        margin-left: -20px;
+        display: flex;
+
+        &-item {
+            min-height: 544px;
+            padding: 50px 31px;
+            margin-bottom: 0;
+            margin-right: 0;
+            margin-left: 20px;
+        }
+    }
+
+    .text-title-style {
+        font-size: 14px;
+    }
+
+    .text-description-style {
+        font-size: 14px;
+        line-height: 1.66;
+    }
+
+    .city-description {
+        margin-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .city-name {
+        margin-bottom: 14px;
+    }
+
+    .working-days-sublist {
+        margin-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .sublist-item:not(:last-child) {
+        margin-bottom: 16px;
+    }
+
+    .location-tel {
+        line-height: 1.83;
+    }
+
+    .location-mail {
+        line-height: 1.83;
+    }
+
+    .location-buttons {
+        margin-top: 81px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .btn:not(:last-child) {
+        margin-bottom: 0;
+        margin-right: 15px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .locations-list {
+        margin-bottom: 86px;
+
+        &-item {
+            min-height: 572px;
+            width: 330px;
+            padding: 52px 43px;
+            margin-left: 31px;
+        }
+    }
+
+    .text-title-style {
+        font-size: 16px;
+    }
+
+    .text-description-style {
+        font-size: 16px;
+        line-height: 1.83;
+    }
+
+    .city-description {
+        margin-top: 32px;
+        padding-bottom: 32px;
+    }
+
+    .city-name {
+        margin-bottom: 10px;
+    }
+
+    .working-days-sublist {
+        margin-top: 32px;
+        padding-bottom: 32px;
+    }
+
+    .sublist-item:not(:last-child) {
+        margin-bottom: 15px;
+    }
+
+    .location-buttons {
+        margin-top: 86px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
 }
