--- a/css/main.css
+++ b/css/main.css
@@ -168,12 +168,24 @@ button {
 }
 
 /* --------------КНОПКИ БОЛЬШИЕ---------------------*/
-.dont-worry {
-  background-color: aqua;
-}
-
+/*      
+Формат HTML для кнопок
+<button class="btn appeal-one">
+        Our Locations
+        <svg class="btn-icon next-one">
+          <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+        </svg>
+      </button>
+      <button class="btn appeal-two">
+        Our Locations
+        <svg class="btn-icon next-two">
+          <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+        </svg>
+      </button>*/
 .btn {
   display: inline-flex;
+  align-items: center;
+  min-width: 161px;
   padding: 0 17px;
   height: 44px;
   border-radius: 22px;
@@ -191,7 +203,43 @@ header .btn {
 @media screen and (min-width: 768px) {
   .btn {
     padding: 0 30px;
-=======
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .btn {
+    padding: 0 37px;
+  }
+}
+
+.btn-icon {
+  margin-left: 8px;
+  width: 10px;
+  height: 10px;
+}
+
+.next-one {
+  fill: #ffffff;
+}
+
+.next-two {
+  fill: #d41443;
+}
+
+.appeal-one {
+  background: #d41342;
+  color: #ffffff;
+}
+
+.appeal-two {
+  background: #ffffff;
+  color: #d41443;
+}
+
+.appeal-two:hover, .appeal-two:focus {
+  background: #ecebeb;
+}
+
 section {
   margin-left: auto;
   margin-right: auto;
@@ -225,48 +273,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .btn {
-    padding: 0 37px;
-  }
-}
-
-.btn-icon {
-  margin-left: 8px;
-  width: 8px;
-  height: 16px;
-  height: 100%;
-}
-
-.appeal-one {
-  background: #d41342;
-  color: #ffffff;
-}
-
-.appeal-two {
-  background: #ffffff;
-  color: #d41443;
-}
-
-.appeal-two:hover, .appeal-two:focus {
-  background: #ecebeb;
-}
-
-.hero {
-  display: block;
-  height: 502px;
-  background-image: url(../images/hero/mob-icecream.png), radial-gradient(circle farthest-side at 65% 51.5%, #ffa5ba 172px, #ffb8ca 172px);
-  background-size: 171px, cover;
-  background-repeat: no-repeat;
-  background-position: left 63% bottom 0, left 0 top 0;
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    height: 399px;
-    background-image: url(../images/hero/tab-icecream.png), radial-gradient(circle farthest-side at 61% 52%, #ffa5ba 161px, #ffb8ca 161px);
-    background-size: 143px, cover;
-    background-position: left 58.5% bottom 0, left 0 top 0;
-=======
   .how-its-made {
     padding: 125px 115px;
     background-repeat: no-repeat;
@@ -373,32 +379,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .hero {
-    height: 665px;
-    background-image: url(../images/hero/desktop-icecream.png), radial-gradient(circle farthest-side at 66% 53.5%, #ffa5ba 269px, #ffb8ca 269px);
-    background-size: 236px, cover;
-    background-position: left 56% bottom 0, left 0 top 0;
-  }
-}
-
-.hero-titul {
-  width: 220px;
-  margin-top: 193px;
-  font-family: Titan One;
-  font-weight: normal;
-  font-size: 26px;
-  line-height: 1.15;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-@media screen and (min-width: 768px) {
-  .hero-titul {
-    margin-top: 102px;
-    font-size: 22px;
-    line-height: 1.14;
-=======
   .cow-text-content {
     padding-left: 74px;
     padding-top: 55px;
@@ -522,25 +502,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .hero-titul {
-    margin-top: 171px;
-    width: 280px;
-    font-size: 38px;
-    line-height: 1.16;
-  }
-}
-
-.hero-tityl-one {
-  font-size: 48px;
-  line-height: 0.96;
-  color: #d41443;
-}
-
-@media screen and (min-width: 768px) {
-  .hero-tityl-one {
-    font-size: 34px;
-    line-height: 0.91;
-=======
   .fact-title {
     font-size: 58px;
     margin-bottom: 25px;
@@ -564,32 +525,6 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
-  .hero-tityl-one {
-    font-size: 58px;
-    line-height: 0.9;
-  }
-}
-
-.hero-btn {
-  height: 24px;
-  margin-top: 19px;
-  padding: 0 14px;
-  border-radius: 20px;
-  /*шрифты*/
-  font-family: DM Sans;
-  font-weight: 400;
-  font-size: 8px;
-  line-height: 1.25;
-}
-
-.hero-btn:last-child {
-  margin-left: 8px;
-}
-
-@media screen and (min-width: 768px) {
-  .hero-btn {
-    margin-top: 20px;
-=======
   .fact-title::before {
     margin-top: 40px;
   }
@@ -670,7 +605,7 @@ section {
   text-align: center;
 }
 
-/***LOCATIONS***/
+/*********LOCATIONS***********/
 .text-title-style {
   font-weight: 500;
   font-size: 12px;
@@ -686,21 +621,27 @@ section {
 }
 
 .locations {
+  height: 765px;
+  position: relative;
   background-color: var(--description-background-color);
+}
+
+.locations .container {
+  position: absolute;
+  top: -102px;
 }
 
 .locations-list {
   margin-bottom: -20px;
-  margin-top: 86px;
 }
 
 .locations-list-item {
-  width: 220px;
-  height: 427px;
+  min-width: 220px;
+  min-height: 427px;
   padding: 43px 20px;
   margin-bottom: 20px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--primary-white-color);
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
@@ -751,6 +692,123 @@ section {
   display: flex;
   flex-direction: column;
   margin-top: 25px;
+}
+
+.location-buttons {
+  margin-top: 54px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+  .btn {
+    min-width: 161px;
+  }
+  .btn:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .locations-item-title {
+    width: 73px;
+    height: 28px;
+    font-size: 16px;
+    line-height: 1.86;
+  }
+  .foodtruck {
+    width: 138px;
+  }
+  .locations-list {
+    margin-bottom: 81px;
+    margin-top: 0;
+    margin-left: -20px;
+    display: flex;
+  }
+  .locations-list-item {
+    min-height: 544px;
+    padding: 50px 31px;
+    margin-bottom: 0;
+    margin-right: 0;
+    margin-left: 20px;
+  }
+  .text-title-style {
+    font-size: 14px;
+  }
+  .text-description-style {
+    font-size: 14px;
+    line-height: 1.66;
+  }
+  .city-description {
+    margin-top: 30px;
+    padding-bottom: 30px;
+  }
+  .city-name {
+    margin-bottom: 14px;
+  }
+  .working-days-sublist {
+    margin-top: 30px;
+    padding-bottom: 30px;
+  }
+  .sublist-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+  .location-tel {
+    line-height: 1.83;
+  }
+  .location-mail {
+    line-height: 1.83;
+  }
+  .location-buttons {
+    margin-top: 81px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .btn:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .locations-list {
+    margin-bottom: 86px;
+  }
+  .locations-list-item {
+    min-height: 572px;
+    width: 330px;
+    padding: 52px 43px;
+    margin-left: 31px;
+  }
+  .text-title-style {
+    font-size: 16px;
+  }
+  .text-description-style {
+    font-size: 16px;
+    line-height: 1.83;
+  }
+  .city-description {
+    margin-top: 32px;
+    padding-bottom: 32px;
+  }
+  .city-name {
+    margin-bottom: 10px;
+  }
+  .working-days-sublist {
+    margin-top: 32px;
+    padding-bottom: 32px;
+  }
+  .sublist-item:not(:last-child) {
+    margin-bottom: 15px;
+  }
+  .location-buttons {
+    margin-top: 86px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 .footer {
