ставит свг для кнопок,делает позиционирование

--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -1,7 +1,8 @@
 <section class="section-location">
   <div class="container">
     <h2 class="visually-hidden">location</h2>
-    <ul class="list list-location">
+    <div class="location-posishon">
+      <ul class="list list-location">
       <li class="card">
         <div class="label-box">
           <span class="label label-cafe">cafe</span>
@@ -81,6 +82,7 @@
           <button class="button-secondary button-Franchise">Franchise
           </button>
        </div>
+    </div>
   </div>
 </section>
  
