--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -24,13 +24,13 @@
     &::after {
       content: '';
       display: block;
-      width: 5px;
-      height: 8px;
+      width: 10px;
+      height: 10px;
       margin-left: 14px;
-      background-image: url();
-      background-size: contain;
+      background-image: url('../images/icons/arrow-half-wite.svg');
+      background-position: center;
       background-repeat: no-repeat;
-      background-color: black;
+      fill: $primaryWhiteColor;
     }
 
     @include for-size(tablet) {
@@ -72,12 +72,12 @@
     &::after {
       content: '';
       display: block;
-      width: 5px;
-      height: 8px;
+      width: 10px;
+      height: 10px;
       margin-left: 14px;
-      background-size: contain;
+      background-image: url('../images/icons/half-arrow-right.svg');
+      background-position: center;
       background-repeat: no-repeat;
-      background-color: black;
     }
 
     @include for-size(tablet) {
