--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -1,6 +1,25 @@
 .section-location {
-  padding-bottom: 113px;
+  padding-bottom: 29px;
   background-color: $secondaryBgColor;
+
+  @include for-size(tablet) {
+    padding-bottom: 35px;
+  }
+  @include for-size(desktop) {
+    padding-bottom: 11px;
+  }
+
+  .location-posishon {
+    position: relative;
+    top: -84px;
+
+    @include for-size(tablet) {
+      top: -78px;
+    }
+    @include for-size(tablet) {
+      top: -102px;
+    }
+  }
 }
 .list-location {
   margin-top: -20px;
