--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -123,7 +123,7 @@
   }
 }
 
-@media screen and (min-width: 1344px) {
+@media screen and (min-width: 1344px) and (max-width: 1679px) {
   .footer__contact-logo-t-d {
     display: block;
     position: absolute;
@@ -158,5 +158,12 @@
   .footer__copyrite {
     // text-align: start;
     padding-left: 15px;
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .footer__copyrite {
+    // text-align: start;
+    padding-left: 168px;
   }
 }
