--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,36 +4,69 @@
         <ul class="gallery-list carousel-inner">
             <li class="item carousel-item active">
                 
-                <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
+                <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady1@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
                 
                 <div class="text-wrap carousel-caption d-none d-md-block">
+                    <svg class="gallery-icon">
+                        <use href="./images/symbol-defs.svg#icon-skobki"></use>
+                    </svg>
+                    <hr class="gallery-line">
                     <p class="gallery-text">
                         Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                         Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
                         ipsum primis in nibh vel risus.
                     </p>
+                    <hr class="gallery-line1">
+                    <hr class="gallery-line2">
+                    <hr class="gallery-line3">
+                    <hr class="gallery-line4">
+                    <hr class="gallery-line5">
+                    <hr class="gallery-line6">
+                    <hr class="gallery-line7">
                 </div>
                 <p class="name">Emily, Los Angeles</p>
             </li>
             <li class="item carousel-item">
-                <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady1@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
+                <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
                 <div class="text-wrap carousel-caption d-none d-md-block">
+                    <svg class="gallery-icon">
+                        <use href="./images/symbol-defs.svg#icon-skobki"></use>
+                    </svg>
+                    <hr class="gallery-line">
                     <p class="gallery-text">
                         Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                         Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
                         ipsum primis in nibh vel risus.
                     </p>
+                    <hr class="gallery-line1">
+                    <hr class="gallery-line2">
+                    <hr class="gallery-line3">
+                    <hr class="gallery-line4">
+                    <hr class="gallery-line5">
+                    <hr class="gallery-line6">
+                    <hr class="gallery-line7">
                 </div>
                 <p class="name">Alice, Chicago</p>
             </li>
             <li class="item carousel-item">
                 <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady2@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
                 <div class="text-wrap carousel-caption d-none d-md-block">
+                    <svg class="gallery-icon">
+                        <use href="./images/symbol-defs.svg#icon-skobki"></use>
+                    </svg>
+                    <hr class="gallery-line">
                     <p class="gallery-text">
                         Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                         Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
                         ipsum primis in nibh vel risus.
                     </p>
+                    <hr class="gallery-line1">
+                    <hr class="gallery-line2">
+                    <hr class="gallery-line3">
+                    <hr class="gallery-line4">
+                    <hr class="gallery-line5">
+                    <hr class="gallery-line6">
+                    <hr class="gallery-line7">
                 </div>
                 <p class="name">Jasmine, New York</p>
             </li>
