--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -33,29 +33,244 @@
   margin-bottom: 60px;
   object-fit: fill;
 }
-
 .gallery .text-wrap {
+  position: relative;
+  background-color: $color-bgr-galary;
+  width: 280px;
+  height: 308px;
   padding: 0px;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
   text-align: center;
+  // z-index: 1;
+
+  @media screen and (min-width: 768px) {
+    width: 620px;
+    height: 164px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 926px;
+    height: 138px;
+  }
 }
+// .gallery .text-wrap {
+//   position: relative;
+//   padding: 0px;
+//   margin-bottom: 30px;
+//   text-align: center;
+// }
+.gallery-icon {
+  position: absolute;
+  top: 20px;
+  left: 50px;
+  width: 54px;
+  height: 40px;
+  fill: $color-line-galary;
 
+  @media screen and (min-width: 768px) {
+    top: 18px;
+    left: 20px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 24px;
+    left: 40px;
+  }
+}
+.gallery-line {
+  position: absolute;
+  top: 39px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 38px;
+    left: 42px;
+    width: 524px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 47px;
+    left: 45px;
+    width: 813px;
+  }
+}
+.gallery-line1 {
+  position: absolute;
+  top: 69px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 68px;
+    left: 42px;
+    width: 524px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 77px;
+    left: 45px;
+    width: 813px;
+  }
+}
+.gallery-line2 {
+  position: absolute;
+  top: 99px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 98px;
+    left: 42px;
+    width: 524px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+}
+.gallery-line3 {
+  position: absolute;
+  top: 129px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+}
+.gallery-line4 {
+  position: absolute;
+  top: 159px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+}
+.gallery-line5 {
+  position: absolute;
+  top: 189px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+}
+.gallery-line6 {
+  position: absolute;
+  top: 219px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+}
+.gallery-line7 {
+  position: absolute;
+  top: 249px;
+  left: 45px;
+  border: none; /* Убираем границу */
+  background-color: $color-line-galary; /* Цвет линии */
+  height: 1px; /* Толщина линии */
+  width: 180px;
+  z-index: 1;
+  @media screen and (min-width: 768px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    top: 0px;
+    left: 0px;
+    width: 0px;
+  }
+}
 .gallery-text {
+  position: relative;
   padding: 32px 52px;
+  width: 260px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.86;
-
+  font-size: 12px;
+  line-height: 2.55;
+  letter-spacing: 0.04em;
   text-align: center;
+
+  z-index: 2;
 
   color: $color-text-black;
 
   @media screen and (min-width: 768px) {
     padding: 29px 38px;
+    width: 600px;
+    font-size: 14px;
+    line-height: 2.16;
   }
 
   @media screen and (min-width: 1280px) {
     padding: 35px 55px;
+    width: 900px;
+    font-size: 16px;
+    line-height: 1.86;
   }
 }
 
@@ -81,6 +296,7 @@
 
 .carousel-indicators {
   position: static;
+  margin-top: 20px;
   margin-bottom: 132px;
 }
 .carousel-indicators li {
@@ -92,24 +308,7 @@
 .carousel-indicators li:not(:last-child) {
   margin-right: 18px;
 }
-.text-wrap {
-  background-color: $color-bgr-galary;
-  width: 280px;
-  height: 308px;
-  padding: 0px;
-  margin-bottom: 30px;
-  text-align: center;
 
-  @media screen and (min-width: 768px) {
-    width: 620px;
-    height: 164px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: 926px;
-    height: 138px;
-  }
-}
 /* Carousel base class */
 .carousel {
   margin-bottom: 0;
@@ -118,7 +317,9 @@
 .carousel-caption {
   position: static;
   bottom: 0;
-  z-index: 10;
+  top: 18px;
+  left: 10px;
+  // z-index: 10;
 }
 
 /* Declare heights because of positioning of img element */
@@ -156,11 +357,4 @@
   @media (min-width: 768px) {
     display: block !important;
   }
-}
-.carousel-indicators {
-  position: static;
-}
-.icon-uniE900:before {
-  // content: '"""&#10078"""';
-  color: #e1e1e1;
 }
