--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,7 +10,9 @@
                         <span class="hero-description-third">+25 баллов</span>
                     </div>
                 </p>
-                <button class="hero-btn" type="button">хочу на бесплатное занятие</button>
+                <div class="hero-btn-container">
+                    <button class="hero-btn" type="button">хочу на бесплатное занятие</button>
+                </div>
             </div>
             <picture>
                 <source
