--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -63,11 +63,18 @@
     background:var(--accent-color);
     border: transparent;
     transition: all 250ms var(--timing-fn);
+    justify-content: center;
 }
 .hero-btn:focus, .hero-btn:hover{
     background: #FFFFFF;
     color:var(--accent-color);
     border: 2px solid var(--accent-color);
+}
+@media screen and (min-width:320px) and (max-width:767px){
+    .hero-btn-container{
+        display: flex;
+        justify-content: center;
+    }
 }
 .hero{
     padding: 50px 0;
@@ -156,6 +163,7 @@
         justify-content: space-between;
         
     }
+    
     .hero{
         padding-top: 70px;
         padding-bottom: 50px;
