Добавляет секцию Хиро и её стили
Изменил скрипт, чтобы закрывалось меню при клике на ссылку-якорь

Дописал в ссылки меню якоря и навесил атрибуты для js

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,10 +35,10 @@
                         </div>
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li class="menu__item"><a href="#" class="menu__link">Программа обучения</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Варианты обучения</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                                <li class="menu__item"><a href="#programm" class="menu__link" close-menu>Программа обучения</a></li>
+                                <li class="menu__item"><a href="#about-us" class="menu__link" close-menu>О нас</a></li>
+                                <li class="menu__item"><a href="#study-options" class="menu__link" close-menu>Варианты обучения</a></li>
+                                <li class="menu__item"><a href="#contacts" class="menu__link" close-menu>Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
