--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,10 +1,15 @@
 // стили для хедера ----------------------------------------   h e a d e r   ----------------
 .header {
-  position: absolute;
+  // position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background-color: transparent;
+  // background-color: transparent;
+  background-color: var(--white-color);
+  box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.5);
+  // border-bottom: 2px solid var(--orange-color);
+  z-index: 999;
 
   &__body {
     height: 89px;
