--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,7 @@
             <div class="menu__overlay"></div>
           </div>
         
-          <button class="buy-now tablet btn" type="button" data-modal-open>Buy now
+          <button class="buy-now tablet btn" type="button" data-modal-open2>Buy now
             <svg class="buy-now-img">
               <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
             </svg>
@@ -49,7 +49,7 @@
                         <button
                           class="close-button"
                           aria-label="Закрыть окно заказа услуг"
-                          data-modal-close
+                          data-modal-close data-modal-close2
                         >
                           <svg class="close-button-img">
                             <use href="./images/header/sprite-hero.svg#icon-close"></use>
@@ -93,36 +93,25 @@
                           </ul>
                           <fieldset class="order-form">
                             <legend class="order-form-title">Choose product and quantity</legend>
-                            <label class="order-form-item">
-                              <input class="order-product" type="checkbox" name="language" value="python">
-                              ice cream
-                                 <input class="order-number" type="number" name="weight" min="0" max="150" step="1" value="0" />
+                            <input class="order-product" type="checkbox" name="product" value="" id="order-product1">
+                            <label class="order-form-item" for="order-product1">
+                              Ice Cream
+                                 <input class="order-number" type="number" name="quantity" min="0" max="150" step="1" value="0" />
                             </label>
-                            <label class="order-form-item">
-                              <input class="order-product" type="checkbox" name="language" value="python">
-                              ice coffee
-                              <input class="order-number" type="number" name="weight" min="0" max="150" step="1" value="0" />
+                            <input class="order-product" type="checkbox" name="product" value="" id="order-product2">
+                            <label class="order-form-item" for="order-product2">
+                              Ice Coffee
+                              <input class="order-number" type="number" name="quantity" min="0" max="150" step="1" value="0" />
                             </label>
-                            <label class="order-form-item">
-                              <input class="order-product" type="checkbox" name="language" value="python">
-                              milkshakes
-                              <input class="order-number" type="number" name="weight" min="0" max="150" step="1" value="0" />
+                            <input class="order-product" type="checkbox" name="product" value="" id="order-product3">
+                            <label class="order-form-item" for="order-product3">
+                              Milkshakes
+                              <input class="order-number" type="number" name="quantity" min="0" max="150" step="1" value="0" />
                             </label>
+                            <button class="order-button btn" type="submit">
+                              Order
+                            </button>
                           </fieldset>
-                          <input
-                            class="checkbox"
-                            type="checkbox"
-                            name="order-confirm"
-                            value=""
-                            id="order-confirm"
-                          />
-                          <label class="order-confirm" for="order-confirm">
-                            <span class="confirm-text"></span>
-                            My order is correct
-                          </label>
-                          <button class="order-button btn" type="submit">
-                            Order
-                          </button>
                         </form>
                       </div>
                   </div>
