--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -21,3 +21,4 @@ $pistachio-color: #c2e297;
 
 $tradition-background-color: #fff5f6;
 $menu-background-color: #e17992;
+$modal-input-color: #e18298;
