--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -123,7 +123,7 @@
   }
 }
 
-@media screen and (min-width: 1344px) and (max-width: 1679px) {
+@media screen and (min-width: 1344px) {
   .footer__contact-logo-t-d {
     display: block;
     position: absolute;
